# web-rapid

./: .gitignore  CMakeLists.txt
src/: file.cpp  file.h  mustache.hpp  template.cpp  template.h  web.cpp  web.h
test/: CMakeLists.txt  base.spec.cpp  server.spec.cpp  template.spec.cpp
test/files/: config.json  example.html  example.json  example.mustache
